--- a/notebooks/causal_impact/BN_and_docalculus.ipynb
+++ b/notebooks/causal_impact/BN_and_docalculus.ipynb
@@ -12,6 +12,7 @@
     "\n",
     "## Reference\n",
     "\n",
+    "* [Interventional distributions and graph utation with the do-operator](https://www.pymc.io/projects/examples/en/latest/causal_inference/interventional_distribution.html)\n",
     "* [Introducing Causal Inference Using Bayesian Networks and *do*-Calculus. (Lu, Zheng, & Quinn, 2022)](https://www.tandfonline.com/doi/full/10.1080/26939169.2022.2128118)\n",
     "* [BNandCausalinference Shiny App](https://alyeskabear.shinyapps.io/BNandCausalinference/)\n",
     "* [Introductions to Causal Calculus](https://www.cs.ubc.ca/labs/lci/mlrg/slides/doCalc.pdf)\n",
