--- a/notebooks/numpyro/0.2-numpyro_regression.ipynb
+++ b/notebooks/numpyro/0.2-numpyro_regression.ipynb
@@ -333,7 +333,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x286d36440>"
+       "<graphviz.graphs.Digraph at 0x15c53e1d0>"
       ]
      },
      "execution_count": 4,
@@ -354,7 +354,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sample: 100%|██████████| 3000/3000 [00:01<00:00, 2290.83it/s, 3 steps of size 6.91e-01. acc. prob=0.93]\n"
+      "sample: 100%|██████████| 3000/3000 [00:01<00:00, 2209.73it/s, 3 steps of size 6.91e-01. acc. prob=0.93]\n"
      ]
     },
     {
@@ -924,7 +924,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20000/20000 [00:01<00:00, 17761.26it/s, init loss: 2476234.7500, avg. loss [19001-20000]: 2705.3284]\n"
+      "100%|██████████| 20000/20000 [00:01<00:00, 17387.90it/s, init loss: 2476234.7500, avg. loss [19001-20000]: 2705.3284]\n"
      ]
     }
    ],
@@ -1061,7 +1061,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x2a85f3af0>"
+       "<graphviz.graphs.Digraph at 0x2b65f6830>"
       ]
      },
      "execution_count": 19,
@@ -1167,30 +1167,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'N' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/U0596854/repos/personal/learning-causal-impact/notebooks/0.2-numpyro_regression.ipynb Cell 38\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/U0596854/repos/personal/learning-causal-impact/notebooks/0.2-numpyro_regression.ipynb#X45sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Simulate data\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/U0596854/repos/personal/learning-causal-impact/notebooks/0.2-numpyro_regression.ipynb#X45sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m data \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39mnormal(random\u001b[39m.\u001b[39mPRNGKey(\u001b[39m999\u001b[39m), (N, D))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/U0596854/repos/personal/learning-causal-impact/notebooks/0.2-numpyro_regression.ipynb#X45sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m true_coefs \u001b[39m=\u001b[39m jnp\u001b[39m.\u001b[39marray([\u001b[39m1.\u001b[39m, \u001b[39m2.\u001b[39m, \u001b[39m3.\u001b[39m])\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/U0596854/repos/personal/learning-causal-impact/notebooks/0.2-numpyro_regression.ipynb#X45sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# logits = jnp.sum(true_coefs * data + 10, axis=1)\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'N' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "N, D = 3000, 3\n",
+    "\n",
     "# Simulate data\n",
     "data = random.normal(random.PRNGKey(999), (N, D))\n",
     "true_coefs = jnp.array([1., 2., 3.])\n",
     "# logits = jnp.sum(true_coefs * data + 10, axis=1)\n",
     "logits = data @ true_coefs + 10\n",
     "labels = dist.Bernoulli(logits=logits).sample(random.PRNGKey(0))\n",
-    "\n",
-    "N, D = 3000, 3\n",
     "\n",
     "def logistic_regression(data, labels):\n",
     "    D = data.shape[1]\n",
@@ -1214,14 +1202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sample: 100%|██████████| 2000/2000 [00:02<00:00, 718.42it/s, 7 steps of size 2.81e-01. acc. prob=0.93]  \n"
+      "sample: 100%|██████████| 2000/2000 [00:02<00:00, 723.37it/s, 7 steps of size 2.81e-01. acc. prob=0.93]  \n"
      ]
     },
     {
@@ -1252,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1266,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,18 +1275,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Array(2982.9292, dtype=float32)"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -1310,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1455,14 +1432,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sample: 100%|██████████| 2000/2000 [00:01<00:00, 1406.35it/s, 63 steps of size 8.65e-02. acc. prob=0.94]\n"
+      "sample: 100%|██████████| 2000/2000 [00:01<00:00, 1357.13it/s, 63 steps of size 8.65e-02. acc. prob=0.94]"
      ]
     },
     {
@@ -1479,6 +1456,13 @@
       "   beta[4]      0.93      0.49      0.92      0.17      1.76    698.74      1.00\n",
       "\n",
       "Number of divergences: 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -1507,14 +1491,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sample: 100%|██████████| 2000/2000 [00:01<00:00, 1407.96it/s, 63 steps of size 8.37e-02. acc. prob=0.95]"
+      "sample: 100%|██████████| 2000/2000 [00:01<00:00, 1423.92it/s, 63 steps of size 8.37e-02. acc. prob=0.95]"
      ]
     },
     {
@@ -1556,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1580,7 +1564,7 @@
        " 'dept_id': Array([0, 0, 1, 1, 2, 2, 3, 3, 4, 4, 5, 5], dtype=int32)}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1620,14 +1604,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sample: 100%|██████████| 4000/4000 [00:01<00:00, 2797.91it/s, 7 steps of size 8.38e-02. acc. prob=0.87] "
+      "sample: 100%|██████████| 4000/4000 [00:01<00:00, 2867.61it/s, 7 steps of size 8.38e-02. acc. prob=0.87] \n"
      ]
     },
     {
@@ -1646,13 +1630,6 @@
       "  delta[5]     -2.20      0.52     -2.17     -3.06     -1.44    147.93      1.01\n",
       "\n",
       "Number of divergences: 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
