added xarray followon

--- a/notebooks/0.3-xarray-example.ipynb
+++ b/notebooks/0.3-xarray-example.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -407,12 +407,12 @@
        "       47, 42, 35, 36, 36, 44, 37, 42, 41, 40, 36, 36, 43, 43, 48, 27, 44,\n",
        "       38, 37, 32, 48, 49, 29, 37, 44, 46, 42, 33, 36, 49, 33, 46, 35, 36,\n",
        "       34, 45, 36, 41, 44, 35, 36, 38, 31, 50, 47, 43, 47, 31, 37])\n",
-       "Dimensions without coordinates: dim_0</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span>dim_0</span>: 100</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-637b7484-a51b-4db4-b4e8-383d26e32b10' class='xr-array-in' type='checkbox' checked><label for='section-637b7484-a51b-4db4-b4e8-383d26e32b10' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>42 47 43 41 38 40 41 45 29 29 49 ... 44 35 36 38 31 50 47 43 47 31 37</span></div><div class='xr-array-data'><pre>array([42, 47, 43, 41, 38, 40, 41, 45, 29, 29, 49, 44, 41, 46, 40, 39, 37,\n",
+       "Dimensions without coordinates: dim_0</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span>dim_0</span>: 100</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-8180063f-425c-48ee-ab80-b6c546c2a8c2' class='xr-array-in' type='checkbox' checked><label for='section-8180063f-425c-48ee-ab80-b6c546c2a8c2' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>42 47 43 41 38 40 41 45 29 29 49 ... 44 35 36 38 31 50 47 43 47 31 37</span></div><div class='xr-array-data'><pre>array([42, 47, 43, 41, 38, 40, 41, 45, 29, 29, 49, 44, 41, 46, 40, 39, 37,\n",
        "       41, 37, 37, 38, 28, 28, 39, 48, 38, 47, 41, 43, 37, 40, 41, 35, 44,\n",
        "       41, 35, 35, 39, 35, 47, 45, 35, 30, 48, 44, 38, 35, 40, 44, 41, 38,\n",
        "       47, 42, 35, 36, 36, 44, 37, 42, 41, 40, 36, 36, 43, 43, 48, 27, 44,\n",
        "       38, 37, 32, 48, 49, 29, 37, 44, 46, 42, 33, 36, 49, 33, 46, 35, 36,\n",
-       "       34, 45, 36, 41, 44, 35, 36, 38, 31, 50, 47, 43, 47, 31, 37])</pre></div></div></li><li class='xr-section-item'><input id='section-8133c49c-a441-48e1-adcc-95c8ce1a7255' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-8133c49c-a441-48e1-adcc-95c8ce1a7255' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-4fc07eb2-5cda-486e-b8fa-671311cead83' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-4fc07eb2-5cda-486e-b8fa-671311cead83' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-30eabf69-d7f8-46d8-97b5-13d7e9d7862c' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-30eabf69-d7f8-46d8-97b5-13d7e9d7862c' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "       34, 45, 36, 41, 44, 35, 36, 38, 31, 50, 47, 43, 47, 31, 37])</pre></div></div></li><li class='xr-section-item'><input id='section-8446c92c-7687-4f69-9398-80a133a161b5' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-8446c92c-7687-4f69-9398-80a133a161b5' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-55817001-0868-482d-9eb9-cf167c9e11b1' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-55817001-0868-482d-9eb9-cf167c9e11b1' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-f46ab14f-09b9-42f8-9443-3e429789917e' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-f46ab14f-09b9-42f8-9443-3e429789917e' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray (dim_0: 100)>\n",
@@ -425,7 +425,7 @@
        "Dimensions without coordinates: dim_0"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,6 +434,7 @@
     "from numpy.random import default_rng\n",
     "import numpy as np\n",
     "import xarray as xr\n",
+    "import pandas as pd\n",
     "\n",
     "rng = default_rng(seed = 111)  ## set random seed \n",
     "demand = rng.binomial(n=200,p=0.2,size=100)   ## get demand values\n",
