--- a/notebooks/ortools-mip.ipynb
+++ b/notebooks/ortools-mip.ipynb
@@ -1185,7 +1185,7 @@
     "prices = (1 + discount) * baseline_price\n",
     "\n",
     "def margin_fn(discount, baseline_price, elasticity, baseline_sales, cost=2):\n",
-    "    \"\"\"Calculate revenues with different discount and elasticity scenarios\"\"\"\n",
+    "    \"\"\"Calculate margin with different discount and elasticity scenarios\"\"\"\n",
     "    chg = elasticity * np.log(1+discount)\n",
     "    demand = baseline_sales * np.exp(chg)\n",
     "    return demand * ((1 + discount) * baseline_price - cost) * -1 # for the minimization function\n",
@@ -1430,6 +1430,7 @@
     }
    ],
    "source": [
+    "# only change to the margin function is that chg becomes an array and we take expected demand, and we set the optimal discount\n",
     "def margin_fn2(discount, baseline_price, elasticities, baseline_sales, cost=2):\n",
     "    \"\"\"Calculate revenues with different discount and elasticity scenarios\"\"\"\n",
     "    chg = elasticities * np.log(1+discount)\n",
